Fix eventlistener base and make two bart boards visible

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,27 +1,25 @@
-@import url('http://fonts.googleapis.com/css?family=Schoolbell&display=swap');
+@import url("http://fonts.googleapis.com/css?family=Schoolbell&display=swap");
 
 .blackboard {
-	background:#002418;
-	font-size: 1.2em;
-	color:white;
-	width:500px;
-	height:200px;
-	padding:10px;
-	border:6px solid #9b3b00;
-	border-bottom:12px solid #9b3b00;
-	overflow:hidden;
-	margin:10px;
-	float:left;
-	border-radius: 3px;
+  background: #002418;
+  font-size: 1.2em;
+  color: white;
+  width: 500px;
+  height: 200px;
+  padding: 10px;
+  border: 6px solid #9b3b00;
+  border-bottom: 12px solid #9b3b00;
+  overflow: hidden;
+  margin: 10px;
+  float: left;
+  border-radius: 3px;
 }
 
 body {
-	font-family: 'Schoolbell', arial, serif;
-	background: #849644;
-
+  font-family: "Schoolbell", arial, serif;
+  background: #849644;
 }
 
 h1 {
-	text-align:center;
-
+  text-align: center;
 }
